Issue #3916 : fix view issue when .src-code too long

--- a/docs/client/docs.less
+++ b/docs/client/docs.less
@@ -322,9 +322,9 @@ ol {
 }
 .api-title .locus .src-code {
     font-size: 11px;
-    font-style: normal;
     color: #20338A;
     text-align: right;
+    clear: both;
 }
 
 .or {
